-=[ GAIM ]=-  The Pimpin' Penguin AIM Clone That's Good For The Soul!

0.9.17:
	Rob: I am an e-mail fiend!
	(after receiving 60 emails within a 5 minute period about a problem
	and responding to all of them immediately)

	I am stupid.



0.9.16;
	Rob: Blah Blah Blah.

	Eric: Looks like Rob didn't have much to say, so I'll write something
instead :)

	There's a few good things in this release, the most important of them
being: Better proxy support, of course. Oh yeah, and you can sign on now,
so that's a good thing too. There's a few more good things going on in this
release, so check out the ChangeLog. 

	Play nicely, and we'll keep hacking away at it.

	Rob: Go Watch `Road Trip'. 

0.9.15:
	Hey boy's and girls.  There's not much to say here this time.
We're loving Southern California, the new job's going great.  We just
got our company website up and the product development is going pretty
smooth.  Life's pretty sweet now.  

	We've hacked up all kinds of goodies for you in 0.9.15.  There's
some file transfer (receive) support for those of you who have been
wanting it for a while. There's some other misc. goodies tossed in as
well.  Enjoy!! Oh yeah, we need a new website.  Come up with a sweet
design and get in touch with me.  The current site is at:
http://www.marko.net/gaim

Thanks much!


0.9.14:
	Well, there's a few random hacks and fixes in here, along with
a little suprise.  You guessed it, kiddos, support for plugins!  Happy
hacking!

0.9.13:
	Not much to say for this release.  Bug fixes, That's all.  Look
for the goodies I promised in 0.9.13 to appear in 0.9.14 which should be
released very soon now.  

	By the way, our CVS is now hosted over at source forge.  Go check
it out at http://www.sourceforge.net.  Please check there before submitting
any bug reports (You can read our CVS comments to see if we have fixed any
problems).

0.9.12:
	Well guys, looks like we got some nifty things in this version.